# befunjit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: compile.cpp.F3E3C3FDDF50CD21.idx  compile.h.41EBE5732A0F5AD8.idx  externs.cpp.9BEE49698E9E918C.idx  externs.h.E3BCC38B71484B33.idx  globals.h.9565C5EE771B3642.idx  main.cpp.93278207FDC33728.idx  snippets.h.D3A9958CCE5451B7.idx  thunk.cpp.7E081FAFC77A5ABB.idx  thunk.h.642C3E75CEAEA2D9.idx  typedefs.h.5BD61B60D01FA947.idx  utils.h.6C475AB407FA1332.idx  vec.h.F2F9E8EE48AD2C16.idx
include/: code.h  compile.h  externs.h  globals.h  snippets.h  thunk.h  typedefs.h  utils.h  vec.h
samples/: calc.txt  dna.txt  dna1.txt  g0.txt  p0.txt  p00.txt  p1.txt  quine.txt  rand0.txt  rng.txt  truth.txt
src/: compile.cpp  externs.cpp  main.cpp  thunk.cpp
